--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Slate theme
-description: Slate is a theme for GitHub Pages.
+title: Most Frequently Used Linux/UNIX Commands
+description: 
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-slate
