--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Most Frequently Used Linux/UNIX Commands
+title: Frequently Used Linux/UNIX Commands
 description: 
 show_downloads: true
 google_analytics:
